--- a/smartsportforntend/package.json
+++ b/smartsportforntend/package.json
@@ -16,10 +16,12 @@
         "@mui/material": "^7.2.0",
         "@mui/material-nextjs": "^7.2.0",
         "@mui/styles": "^6.4.8",
+        "formik": "^2.4.6",
         "next": "15.4.5",
         "prettier": "^3.6.2",
         "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "yup": "^1.7.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
